--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -15,13 +15,8 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v2
-    - name: Set up JDK 1.11
-      uses: actions/setup-java@v1
-      with:
-        java-version: 1.11
-    - name: Build with Maven
-      run: mvn -B package --file pom.xml
+    - name: GitHub Action for Maven
+      uses: LucaFeger/action-maven-cli@1.1.0
 
 
     - name: Checkout code
