--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -15,17 +15,21 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: GitHub Action for Maven
-      uses: LucaFeger/action-maven-cli@1.1.0
+      - uses: actions/checkout@v2
+      - name: Set up JDK 1.8
+        uses: actions/setup-java@v1
+        with:
+          java-version: 1.8
+      - name: Build with Maven
+        run: ./mvnw package && java -jar target/demo-backend-spring-boot-0.0.1.jar
 
+      - name: Checkout code
+        uses: actions/checkout@v2
 
-    - name: Checkout code
-      uses: actions/checkout@v2
-
-    - name: Build and push Docker images
-      uses: docker/build-push-action@v1
-      with:
-        username: ${{ secrets.DOCKER_USERNAME }}
-        password: ${{ secrets.DOCKER_PASSWORD }}
-        repository: pablon27/demo-backend-spring-boot
-        tags: latest
+      - name: Build and push Docker images
+        uses: docker/build-push-action@v1
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+          repository: pablon27/demo-backend-spring-boot
+          tags: latest
