--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -21,7 +21,7 @@ jobs:
         with:
           java-version: 1.11
       - name: Build with Maven
-        run: ./mvnw package && java -jar target/demo-backend-spring-boot-0.0.1.jar
+        run: ./mvnw clean install
 
       - name: Checkout code
         uses: actions/checkout@v2
