--- a/pom.xml
+++ b/pom.xml
@@ -11,12 +11,12 @@
 	</parent>
 	<groupId>cl.pablosilvab</groupId>
 	<artifactId>demo-backend-spring-boot</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>0.1</version>
 	<name>demo-backend-spring-boot</name>
 	<description>Demo project for Spring Boot</description>
 
 	<properties>
-		<java.version>11</java.version>
+		<java.version>1.8</java.version>
 		<spring-cloud.version>Hoxton.SR6</spring-cloud.version>
 	</properties>
 
