--- a/.travis.yml
+++ b/.travis.yml
@@ -1,16 +1,13 @@
+dist: trusty
 language: java
+sudo: false
 jdk:
-  - openjdk11
-script:
-  - ./mvnw clean install
-  
-before_install:
-  - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
-  - docker pull openjdk:11-jre-slim-sid
- 
-script:
-  - ./mvnw clean org.jacoco:jacoco-maven-plugin:prepare-agent install
-  - ./mvnw heroku:deploy jib:build -P deploy-heroku,deploy-docker
+  - oraclejdk11
+
+git:
+  depth: 2 #clone repository to a maximum depth of 2 commits
+
+script: "mvn clean install -Dmaven.javadoc.skip=true -B -V"
 
 after_success:
-  - bash <(curl -s https://codecov.io/bash)
+  - mvn clean integration-test
