--- a/src/main/resources/application-default.properties
+++ b/src/main/resources/application-default.properties
@@ -1,6 +1,15 @@
 #datasource
-spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.url=jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=password
+
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.show-sql=true
+
+spring.h2.console.enabled=true
+spring.h2.console.settings.web-allow-others=true
+
+springdoc.api-docs.path=/api-docs
+springdoc.swagger-ui.operationsSorter=method
+springdoc.swagger-ui.tagsSorter=alpha
