--- a/src/main/resources/application-default.properties
+++ b/src/main/resources/application-default.properties
@@ -1,14 +1,11 @@
-#datasource
-spring.datasource.url=jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=password
-
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.datasource.url=jdbc:mysql://localhost:3306/demo_backend_spring_boot
+spring.datasource.username=demo_backend_spring_boot
+spring.datasource.password=demo_backend_spring_boot
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=true
-
-spring.h2.console.enabled=true
-spring.h2.console.settings.web-allow-others=true
+spring.jpa.properties.hibernate.format_sql=true
 
 springdoc.api-docs.path=/api-docs
 springdoc.swagger-ui.operationsSorter=method
