--- a/src/main/resources/application-default.properties
+++ b/src/main/resources/application-default.properties
@@ -3,7 +3,7 @@ spring.datasource.username=demo_backend_spring_boot
 spring.datasource.password=demo_backend_spring_boot
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
