changes: - work with env variables - work with profiles

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,8 +7,8 @@ services:
     environment:
       MYSQL_ROOT_PASSWORD: root_password
       MYSQL_DATABASE: demo_backend_spring_boot
-      MYSQL_USER: demo_backend_spring_boot
-      MYSQL_PASSWORD: demo_backend_spring_boot
+      MYSQL_USER: ${DB_USER}
+      MYSQL_PASSWORD: ${DB_PASS}
     ports:
       - "3306:3306"
     volumes:
@@ -22,10 +22,11 @@ services:
     depends_on:
       - mysql
     environment:
-      SPRING_DATASOURCE_URL: jdbc:mysql://mysql:3306/demo_backend_spring_boot
-      SPRING_DATASOURCE_USERNAME: demo_backend_spring_boot
-      SPRING_DATASOURCE_PASSWORD: demo_backend_spring_boot
-      SPRING_DATASOURCE_DRIVER-CLASS-NAME: com.mysql.cj.jdbc.Driver
+      - SPRING_DATASOURCE_URL=${DB_URL}
+      - SPRING_DATASOURCE_USERNAME=${DB_USER}
+      - SPRING_DATASOURCE_PASSWORD=${DB_PASS}
+      - SPRING_DATASOURCE_DRIVER_CLASS_NAME=com.mysql.cj.jdbc.Driver
+      - SPRING_PROFILES_ACTIVE=dev
     ports:
       - "8080:8080"
     networks:
