--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,11 +1,14 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/demo_backend_spring_boot
-spring.datasource.username=demo_backend_spring_boot
-spring.datasource.password=demo_backend_spring_boot
+spring.datasource.url=${DB_URL}
+spring.datasource.username=${DB_USER}
+spring.datasource.password=${DB_PASS}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+
+spring.datasource.hikari.maximum-pool-size=10
 
 springdoc.api-docs.path=/api-docs
 springdoc.swagger-ui.operationsSorter=method
