change basic auth to jwt

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,7 @@ spring.profiles.active=local
 
 logging.level.org.springframework=INFO
 logging.level.org.hibernate.SQL=DEBUG
+
+jwt.secret=EsteEsUnSecretoMuyLargoParaJWT12345
+jwt.expiration=3600000
+jwt.issuer=demo_backend_spring_boot
