feat: add Kubernetes manifests and Liquibase configuration

--- a/pom.xml
+++ b/pom.xml
@@ -155,6 +155,10 @@
 
 
 
+        <dependency>
+            <groupId>org.liquibase</groupId>
+            <artifactId>liquibase-core</artifactId>
+        </dependency>
 
     </dependencies>
 
