--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,7 @@ logging.level.org.hibernate.SQL=DEBUG
 jwt.secret=EsteEsUnSecretoMuyLargoParaJWT12345
 jwt.expiration=3600000
 jwt.issuer=demo_backend_spring_boot
+
+spring.liquibase.change-log=classpath:db/changelog/initial-schema.xml
+spring.liquibase.enabled=true
+spring.liquibase.drop-first=false
